css/components/list_of_posts.css
#list_of_posts {
  margin-top: 1.5em;
}

section {    
  h2 {
    margin-top: 0;
  }
  
  .alinks:last-child {
    margin-bottom: 0;
  }
}

/* The width of the window is 100vw, the width of <main> is 100%.
 *
 * When we expand <section>s to break out of <main>, we need to add
 * a negative left margin to move it against the edge of the window,
 * then re-add our padding.
 *
 *    |                   |
 *    |    +++++++++++    | 
 *    |    +++++++++++    | 
 *    |                   |
 *
 *         <!- 100% ->
 *     <----- 100vw ----->
 *
 */
#list_of_posts section.plinks {
  padding:     1.5em var(--default-padding);
  width:       calc(100vw);
  margin-left: calc(50% - 50vw);
  
  & > * {
    max-width: var(--max-width);
    width: calc(100% - 2*var(--default-padding));
    margin: 0 auto;
    padding: 0 var(--default-padding);
  }
}

@media screen and (width>=750px) {
  #list_of_posts section.plinks {
    padding:     1.5em 0;
  }
}

@media screen and (width<=750px) {
  #list_of_posts section.plinks {
    & > * {
      margin: 0;
    }
  }
}

